syntax = "proto3";
package osmosis.txfees.v1beta1;

import "gogoproto/gogo.proto";
import "amino/amino.proto";
import "osmosis/txfees/v1beta1/feetoken.proto";
import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/osmosis-labs/osmosis/v25/x/txfees/types";

service Msg {
  rpc SetFeeTokens(MsgSetFeeTokens) returns (MsgSetFeeTokensResponse);
}

// ===================== MsgSetFeeTokens
message MsgSetFeeTokens {
  option (amino.name) = "osmosis/set-fee-tokens";
  option (cosmos.msg.v1.signer) = "sender";

  repeated FeeToken fee_tokens = 1 [
    (gogoproto.moretags) = "yaml:\"fee_tokens\"",
    (gogoproto.nullable) = false
  ];
  string sender = 2 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
}

message MsgSetFeeTokensResponse {}
